# saw-solver-rs

./: .gitignore  Cargo.toml  README.md  index.js  pyproject.toml  template_setup.py
.github/workflows/: deploy.yml
pkg/: README.md  package.json  saw_solver_rs.d.ts  saw_solver_rs.js  saw_solver_rs_bg.wasm  saw_solver_rs_bg.wasm.d.ts
scripts/: solve_q08.py
src/: lib.rs
tests/: benchmark.py
www/: index.html  index.js
